# dvs_mcemvs

./: .gitignore  README.md  dependencies.yaml
cartesian3dgrid/: CMakeLists.txt
mapper_emvs_stereo/: CMakeLists.txt  package.xml
mapper_emvs_stereo/cfg/DSEC/interlaken_00_b_2/: dsec.conf
mapper_emvs_stereo/cfg/DSEC/zurich_04_a_full/: dsec.conf
mapper_emvs_stereo/cfg/evimo2/: evimo2.conf
mapper_emvs_stereo/cfg/hkust/: hkust_lab.conf
mapper_emvs_stereo/cfg/rpg_eccv18/boxes_edited/AtHc/: rpg_boxes_edited.conf
mapper_emvs_stereo/cfg/rpg_eccv18/boxes_edited/AtHc_shuffled/: rpg_boxes_edited.conf
mapper_emvs_stereo/cfg/rpg_eccv18/boxes_edited/alg1/: rpg_boxes_edited.conf
mapper_emvs_stereo/cfg/rpg_eccv18/monitor_edited/AtHc/: rpg_monitor_edited_fixedts.conf
mapper_emvs_stereo/cfg/rpg_eccv18/monitor_edited/AtHc_shuffled/: rpg_monitor_edited_fixedts.conf
mapper_emvs_stereo/cfg/rpg_eccv18/monitor_edited/alg1/: rpg_monitor_edited_fixedts.conf
mapper_emvs_stereo/cfg/rpg_eccv18/reader/alg1/: rpg_reader_fixedts.conf
mapper_emvs_stereo/cfg/tumvie/bike-easy-3_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/bike-easy-4_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/bike-easy-5_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/desk2_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/mocap-1d-trans_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/mocap-3d-trans_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/running-easy-0_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/running-easy-1_full/: tum-vie.conf
mapper_emvs_stereo/cfg/tumvie/skate-easy-1_full/: tum-vie.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying1_full/AcAt/: flying1.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying1_full/AcHt/: flying1.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying1_full/AtHc/: flying1.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying1_full/AtHc_shuffled/: flying1.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying1_full/HcHt/: flying1.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying1_full/alg1/: flying1.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying1_full/alg1_with_dsi/: flying1.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying2_full/AcAt/: flying2.conf
mapper_emvs_stereo/cfg/upenn_mvsec/mvsec_flying2_full/AcHt/: flying2.conf
mapper_emvs_stereo/include/mapper_emvs_stereo/: .kdev_include_paths  calib.hpp  data_loading.hpp  mapper_emvs_stereo.hpp  process1.hpp  process2.hpp  process5.hpp  trajectory.hpp  utils.hpp
mapper_emvs_stereo/launch/: rpg_calib_info.launch
mapper_emvs_stereo/scripts/: depth_metrics.py  evaluate_mcemvs_dsec.py  mocap_txt2bag.py  precision_completeness.py
mapper_emvs_stereo/src/: calib.cpp  data_loading.cpp  main.cpp  mapper_emvs_stereo.cpp  median_filtering.cpp  process1.cpp  process2.cpp  process5.cpp  utils.cpp
(+37 files in other folders)
